implement caching by redis (#2)
* Implemented Redis cache implementation